# rocket-lamp

./: .gitignore  CMakeLists.txt  README.md  configure.sh  deploy.sh  pico_sdk_import.cmake
model/stl/: rocket-lamp_Rocket Lamp v19_Root_1_base_1_base-top_1_base-top.stl  rocket-lamp_Rocket Lamp v19_Root_1_moon_1_big-moon-crater_1_big-moon-crater.stl  rocket-lamp_Rocket Lamp v19_Root_1_moon_1_little-moon-crater_1_little-moon-crater.stl  rocket-lamp_Rocket Lamp v19_Root_1_moon_1_moon-container_1_moon-container.stl  rocket-lamp_Rocket Lamp v19_Root_1_moon_1_moon-conver_1_moon-conver.stl  rocket-lamp_Rocket Lamp v19_Root_1_moon_1_moon-outer_1_moon-outer.stl  rocket-lamp_Rocket Lamp v19_Root_1_pegs_1_peg(x4).stl  rocket-lamp_Rocket Lamp v19_Root_1_rocket_1_lid-circle_1_lid-circle.stl  rocket-lamp_Rocket Lamp v19_Root_1_rocket_1_rocket-container_1_rocket-container.stl  rocket-lamp_Rocket Lamp v19_Root_1_rocket_1_rocket-cover_1_rocket-cover.stl  rocket-lamp_Rocket Lamp v19_Root_1_rocket_1_rocket-lid-outer_1_rocket-lid-outer.stl
src/: main.c  poll_button.c  poll_button.h  read_adc.c  read_adc.h  rgb_color.c  rgb_color.h  view.h  view_mix.c  view_rainbow.c  view_rocket.c  view_white.c
wire/: rocket-lamp.fzz
